fts_probe update in repsonse to github comments
--rename struct memebers for clarity
--update README diagram
--cleanup comments

--- a/src/backend/fts/README
+++ b/src/backend/fts/README
@@ -138,12 +138,12 @@ mechanisms.
           |     upper        |
           |                  |
           |                  ^
-      done|----------------- |start
+      done|                  |start
           |                  |
           v     lower        |
-          |                  |  <-----+ request3
-          |                  |  <-----| request2
-          +----------->------+  <-----+ request1
+          |                  |
+          |                  |  <-----+ request1, request2, request3
+          +----------->------+
                 waitLatch
 
 
